# MaTiSSe

./: .coverage  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  MaTiSSe.py  Makefile  README.md  build.py  cliff.toml  index.html  params.json  pyproject.toml  release.sh  setup.py  test_suite.py
.github/workflows/: ci.yml  docs.yml
MaTiSSe/: MaTiSSe.py  __main__.py
MaTiSSe/css/: codehilite.css
css/: matisse_defaults_printing.css  slide-0-overtheme.css  slide-3-overtheme.css  slide-47-overtheme.css  slide-77-overtheme.css  slide-80-overtheme.css  theme.css
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/advanced/: boxes.md  callouts.md  checklists.md  code.md  columns.md  diagrams.md  figures.md  incremental.md  index.md  inline-formatting.md  math.md  offline.md  reveal.md  tables.md  themes.md  theorems.md  video.md
docs/guide/: changelog.md  concepts.md  contributing.md  examples.md  faq.md  index.md  installation.md  quickstart.md  themes.md  usage.md
docs/reference/: cli.md  feature-matrix.md  index.md  markdown-syntax.md  metadata.md  themes.md
examples/: build.sh  simple.md
examples/getting-started/: README.md  getting_started.md  main_theme.md  metadata.yaml  theme.yaml
examples/getting_started/: README.md  getting_started.md  main_theme.md
examples/reveal-advanced/: README.md  advanced.md
examples/reveal-quickstart/: README.md  quickstart.md
examples/reveal-scientific/: README.md  metadata.yaml  talk.md
examples/themes/: README.md  talk.md
matisse/: __init__.py  __main__.py  box.py  callout.py  chapter.py  columns.py  config.py  diagram.py  figure.py  figure_group.py  incremental.py  labels.py  markdown_utils.py  matisse.py  matisse_config.py  mdx_custom_span_class.py  mdx_mathjax.py  mdx_quarto_span.py  mdx_strikethrough.py  mdx_sup_sub.py  metadata.py  note.py  parser.py  position.py  presentation.py  rawdata.py  section.py  slide.py  subsection.py  substep.py  table.py  theme.py  theme_element.py  theme_slide.py  theme_slide_content.py  theme_slide_footer.py  theme_slide_header.py  theme_slide_sidebar.py  theorem.py  toc.py  (+1 more)
matisse/backends/: __init__.py  base.py
matisse/cli/: __init__.py  _app.py  _command.py  _completions.py  _options.py
matisse/data/: data.py
matisse/presentation/: metadata.py  presentation.py  section.py  slide.py  toc.py  (+2 more)
tests/: conftest.py  create.py  suite_tests.py  test_base_decorators.py  test_cli.py  test_code_highlighting.py  test_impress_features.py  test_inline_extensions.py  test_integration.py  test_metadata.py  test_parser.py  test_phase62_features.py  test_reveal_backend.py  test_reveal_integration.py  test_reveal_theme.py  test_theme.py
(+426 files in other folders)
